Cambios para el pages

--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "sass": "1.62.1"
   },
   
-  
+  "homepage": "http://kennya2709.github.io/orona_gitpages/",
+
 
   "scripts": {
-   
+
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
