--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "sass": "1.62.1"
   },
   
-  "homepage": "https://kennya2709.github.io/reyes_examen_parcial1/",
+  "homepage": "http://kennya2709.github.io/reyes_examen_parcial1/",
 
 
   "scripts": {
